removed default post, added studies, fixed button alignment, js transitions

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,6 +66,9 @@ pre.highlight code,
   margin-right: .2em;
 }
 
+.navigation {
+  float: none;
+}
 
 .navigation__item {
   margin: 0 .4em .4em 0;
